# antares_data_collection

./: .gitignore  .readthedocs.yml  NEWS.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: check_backend.yml  check_using_tox.yml  ci.yml  coverage.yml  debug_v.yml  publish.yml
docs/: developers.md  index.md  reference.md
docs/css/: custom_site.css
src/antares/data_collection/: __init__.py  constants.py  user_api.py  utils.py
src/antares/data_collection/batteries/: constants.py  parsing.py
src/antares/data_collection/cli/: license_checker_and_adder.py
src/antares/data_collection/dsr/: constants.py  parsing.py
src/antares/data_collection/dsr/capacity_modulation/: constants.py  parsing.py
src/antares/data_collection/dsr/cluster/: constants.py  parsing.py
src/antares/data_collection/links/: conf_links.py  constants.py  links.py  parsing.py
src/antares/data_collection/links/parsing/: links.py
src/antares/data_collection/misc/: constants.py  parsing.py
src/antares/data_collection/misc/installed_power/: constants.py  parsing.py
src/antares/data_collection/misc/load_factor/: constants.py  parsing.py
src/antares/data_collection/referential_data/: main_params.py  struct_main_params.py
src/antares/data_collection/thermal/: conf_thermal.py  constant_specific.py  constants.py  parsing.py  thermal.py  utils.py
src/antares/data_collection/thermal/installed_power/: constants.py  parsing.py  specific_param.py
src/antares/data_collection/thermal/param_modulation/: constants.py  parsing.py
src/antares/data_collection/thermal/parsing/: installed_power.py  specific_param.py
src/antares/data_collection/thermal/specific_param/: constants.py  parsing.py
src/antares/data_collection/thermal/technical_parameters/: constants.py  parsing.py
src/antares/data_collection/tools/: conf.py  tools.py
src/antares_data_collection/: __init__.py  pandas_utils.py
src/antares_data_collection/cli/: license_checker_and_adder.py
src/antares_data_collection/import_files/: import_config.py
tests/: conftest.py  test_pandas_utils.py
tests/antares/batteries/: test_batteries.py
tests/antares/cli/: test_license_checker_and_adder.py
tests/antares/dsr/: test_dsr_capacity_modulation.py  test_dsr_cluster.py
tests/antares/links/: links.py  test_links.py  test_links_inmemory.py
tests/antares/links/data_test/: README.md  Transfer Links.csv  ntc.parquet  ntc_index.parquet  transfer_links.parquet
tests/antares/misc/: test_misc_installed_power.py  test_misc_load_factor.py
tests/antares/referential_data/: test_main_params.py
tests/antares/resources/: Batteries.csv  DSR Derating Index.csv  DSR Derating.csv  DSR.csv  Derating Index.csv  Group Derating Index.csv  Group Derating.csv  Group Must-run Index.csv  Group Must-run.csv  Inelastic Index.csv  MAIN_PARAMS_2025.xlsx  Must-run Index.csv  NTCs Index.csv  Other RES Hourly Index.csv  Renewables.csv  Thermal.csv  Transfer Links.csv
tests/antares/resources/expected_output_files/: file.xlsx  specific_2030.xlsx  specific_2035.xlsx  thermal_2027_2040_2050_2060.xlsx  thermal_installed_power.csv  thermal_installed_power.xlsx
tests/antares/resources/expected_output_files/batteries/: cluster_battery_PEMMDB.xlsx  cluster_battery_format_pegase.xlsx
tests/antares/resources/expected_output_files/dsr/: capacity_modulation_DSR.xlsx  cluster_DSR.xlsx  dsr_cluster_2030.xlsx  dsr_cluster_2035.xlsx
tests/antares/resources/expected_output_files/links/: PEMMDB_LINK.xlsx
tests/antares/resources/expected_output_files/misc/: installedMisc_PEMMDB.xlsx  load_factor_biomass_2029-2030.csv  load_factor_biomass_2034-2035.csv  load_factor_geothermal_2034-2035.csv  load_factor_waste_2029-2030.csv  load_factor_waste_2034-2035.csv  load_factor_wave_2034-2035.csv
tests/antares/resources/expected_output_files/thermal/: CM_PEMMDB_2029-2030.csv  CM_PEMMDB_2034-2035.csv  specific_2030.xlsx  specific_2035.xlsx  specific_param_PEMMDB.xlsx  thermal_installed_power.xlsx
tests/antares/resources/input_files/: MAIN_PARAMS_2025.xlsx
tests/antares/thermal/: test_conf_thermal.py  test_install_power.py  test_param_modulation.py  test_specific_param.py  test_specific_parameters.py  test_thermal.py
tests/antares/tools/: test_conf_tools.py  test_create_xlsx_workbook.py  test_tools.py
tests/antares/utils/: test_utils.py
tests/antares/whole_converter/: test_whole_pemmdb_converter.py
tests/cli/: test_license_checker_and_adder.py
tests/data_references/: peak_hours.csv  peak_months.csv  ref_links.csv  ref_pays.csv  study_scenario.csv
tests/import/: test_import_config.py
