[project]
name = "antares-data-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "berthetclement", email = "clement.berthet013@gmail.com" }
]
requires-python = ">=3.11"

# click is used as runtime with the package to add header with license information
dependencies = [
    "click>=8.3.1",
    "pandas",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

[project.scripts]
license-checker = "antares.data_collection.cli.license_checker_and_adder:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
relative_files = true

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.3.251201",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.mypy]
mypy_path = "src"
packages = ["antares", "tests"]
strict = true
enable_error_code = ["explicit-override"]

# Ignore pytest fixture decorator type errors ONLY in test files
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["untyped-decorator"]
