[project]
name = "antares-data-collection"
version = "0.1.0"
description = "Import and manage data from ENTSOE/pemmdb then format and export for Pegase"
readme = "README.md"
authors = [
    { name = "Tatiana Vargas", email = "tatiana.vargas@rte-france.com" },
    { name = "Clement Berthet", email = "clement.berthet_externe@rte-france.com" }
]
requires-python = ">=3.11"

dependencies = [
    "openpyxl>=3.1.5",
    "pandas",
    "polars~=1.39.3",
    "xlsxwriter>=3.2.9",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
relative_files = true

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.3.251201",
    "pyarrow>=22.0.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "click~=8.1.7",
    "types-openpyxl>=3.1.5.20250919",
]

[project.optional-dependencies]
parquet = ["pyarrow"]
